--- a/templates/common/pet-posts.html
+++ b/templates/common/pet-posts.html
@@ -11,7 +11,10 @@
             <p>{{ pet.name }}</p>
             <p>{{ pet.pet_type }} - {{ pet.breed }}</p>
             <p>Age: {{ pet.age }}</p>
-            <p>Description: {{ pet.description }}</p>
+            <p>Gender: {{ pet.gender }}</p>
+            <p>Town: {{ pet.town }}</p>
+            <p>Intrigued to learn more about {{ pet.name }}? Dive into the details to discover all there is to know!</p>
+
              <div class="details-buttons">
                 {% if user.is_authenticated and user == pet.created_by %}
                     <a href="{% url 'details pet' pk=pet.pk %}" class="details-link">Details</a>
