--- a/staticfiles/css/details.css
+++ b/staticfiles/css/details.css
@@ -20,3 +20,22 @@
 .details-buttons, .adoption-buttons {
     margin-top: 40px;
 }
+
+.card-img-top {
+    width: 100%;
+    max-height: 400px; /* Adjust the max height as needed */
+    object-fit: cover; /* Ensure the image maintains aspect ratio and covers the container */
+    border-radius: 8px;
+}
+
+.form p {
+    font-weight: bold; /* Make the paragraph text bold */
+    font-size: 16px; /* Adjust the font size as needed */
+    color: #1c1106; /* Adjust the text color as needed */
+}
+
+/* Add this CSS to style the title of the fields */
+.form p:first-child {
+    font-size: 20px; /* Adjust the font size for the title */
+    color: #e67fba; /* Adjust the color for the title */
+}
