add placeholders on the volunteer  forms

--- a/staticfiles/css/form.css
+++ b/staticfiles/css/form.css
@@ -72,6 +72,7 @@
     box-sizing: border-box;
     font-size: 14px;
     font-family: 'Quicksand', sans-serif;
+    text-align: center ;
 }
 
 .form div label {
