--- a/staticfiles/css/details.css
+++ b/staticfiles/css/details.css
@@ -23,19 +23,18 @@
 
 .card-img-top {
     width: 100%;
-    max-height: 400px; /* Adjust the max height as needed */
-    object-fit: cover; /* Ensure the image maintains aspect ratio and covers the container */
+    max-height: 400px;
+    object-fit: cover;
     border-radius: 8px;
 }
 
 .form p {
-    font-weight: bold; /* Make the paragraph text bold */
-    font-size: 16px; /* Adjust the font size as needed */
-    color: #1c1106; /* Adjust the text color as needed */
+    font-weight: bold;
+    font-size: 16px;
+    color: #1c1106;
 }
 
-/* Add this CSS to style the title of the fields */
 .form p:first-child {
-    font-size: 20px; /* Adjust the font size for the title */
-    color: #e67fba; /* Adjust the color for the title */
+    font-size: 20px;
+    color: #e67fba;
 }
