--- a/templates/adoption/adoption_details.html
+++ b/templates/adoption/adoption_details.html
@@ -2,15 +2,11 @@
 s
 {% block content %}
 
-<head>
-    <title>Adopt</title>
-</head>
-<body>
     <h2>Adopt</h2>
     <form class="form" method="post" action="">
             {% csrf_token %}
            {% for field in form %}
-                <div>
+                 <div class="form-field">
                     <label for="{{ field.id_for_label }}">{{ field.label }}</label>
                     {{ field }}
                 </div>
@@ -18,6 +14,6 @@ s
             {{ form.errors }}
         <button type="submit">Send</button>
     </form>
-</body>
+
 
 {% endblock %}
