delete useless code

--- a/templates/user/login.html
+++ b/templates/user/login.html
@@ -1,7 +1,7 @@
 {% extends 'common/index.html' %}
 
 {% block content %}
-    <div class="profile">
+    <div>
     <h2 class="profile">Login</h2>
         <form class="form" method="post" action="">
             {% csrf_token %}
