change the style of adoption application view

--- a/templates/adoption/my_adoption_application.html
+++ b/templates/adoption/my_adoption_application.html
@@ -15,7 +15,7 @@
                     </div>
                 {% endfor %}
             {% else %}
-                <p>No adoption applications filled yet.</p>
+                <h1> No adoption applications filled yet.</h1>
             {% endif %}
         </div>
   </div>
