--- a/staticfiles/css/details.css
+++ b/staticfiles/css/details.css
@@ -29,12 +29,10 @@
 }
 
 .form p {
-    font-weight: bold;
-    font-size: 16px;
-    color: #1c1106;
+    color: #1f0710;
+    font-size: 24px;
+    margin-top: 10px;
+
+
 }
 
-.form p:first-child {
-    font-size: 20px;
-    color: #e67fba;
-}
