--- a/templates/adoption/adoption_application_detail.html
+++ b/templates/adoption/adoption_application_detail.html
@@ -2,29 +2,18 @@
 s
 {% block content %}
 
+
 <h2>Adoption Details</h2>
-    <ul>
-        <li>
-            Pet: {{ adoption.pet }}
-        </li>
-        <li>
-            User: {{ adoption.user }}
-        </li>
-        <li>
-            Phone: {{ adoption.contact_number }}
-        </li>
-        <li>
-            Home Environment: {{ adoption.home_environment}}
-        </li>
-        <li>
-            Previous Pet Experience: {{ adoption.previous_pet_experience }}
-        </li>
-            <li>
-            Reason for adoption: {{ adoption.reason_for_adoption }}
-        </li>
-
-    </ul>
+     <div class="form">
 
 
+     <p> <STRONG>Pet: </STRONG>  {{ adoption.pet }}</p>
+     <p> <STRONG>User: </STRONG>  {{ adoption.user }}</p>
+     <p> <STRONG>Phone:</STRONG>  {{ adoption.contact_number }}</p>
+     <p> <STRONG>Home Environment: </STRONG>  {{ adoption.home_environment}}</p>
+     <p> <STRONG>Previous Pet Experience: </STRONG>  {{ adoption.previous_pet_experience }}</p>
+     <p> <STRONG>Reason for adoption: </STRONG>  {{ adoption.reason_for_adoption }}</p>
+
+        </div>
 
 {% endblock %}
