--- a/templates/adoption/owner_approved_adoptions.html
+++ b/templates/adoption/owner_approved_adoptions.html
@@ -18,7 +18,7 @@
                 </div>
             {% endfor %}
         {% else %}
-            <p>No approved adoption applications available.</p>
+            <h1>No approved adoption applications available.</h1>
         {% endif %}
    </div>
  </div>
