--- a/templates/posts/post-details.html
+++ b/templates/posts/post-details.html
@@ -3,33 +3,33 @@
 {% block content %}
     <h2 class="pet">{{ object.name }}</h2>
     <div class="form">
-
     {% if object.photo %}
           <img src="{{ pet.photo.url }}" class="card-img-top square-image" alt="Pet Image">
     {% endif %}
     {% if object.pet_type == 'Other' %}
-        <p>Pet type : {{ object.other_pet_type  }}</p>
+        <p> <STRONG>Pet type:</STRONG>  {{ object.other_pet_type  }}</p>
     {% else %}
-        <p>Pet type : {{ object.pet_type  }}</p>
+        <p><STRONG>Pet type: </STRONG> {{ object.pet_type }}</p>
     {% endif %}
-        <p>Breed: {{ object.breed}}</p>
-        <p>Age: {{ object.age }}</p>
-        <p>Gender: {{ object.gender }}</p>
+
+        <p> <strong>Breed: </strong> {{ object.breed}}</p>
+        <p><strong>Age: </strong> {{ object.age }}</p>
+        <p><strong>Gender: </strong> {{ object.gender }}</p>
     {% if object.description %}
-        <p>Description: {{ object.description}}</p>
+        <p><strong>Description: </strong> {{ object.description}}</p>
     {% endif %}
     {% if object.specifics_in_behavior %}
-        <p>Specifics in behavior: {{ object.specifics_in_behavior}}</p>
+        <p><strong>Specifics in behavior: </strong> {{ object.specifics_in_behavior}}</p>
     {% endif %}
-        <p>Health status: {{ object.health_status_text}}</p>
-    <p>Town: {{ object.town}}</p>
+        <p> <strong> Health status: </strong> {{ object.health_status_text}}</p>
+    <p><strong>Town: </strong> {{ object.town}}</p>
     {% if object.can_be_driven %}
         <p>Can be driven to other town: Yes</p>
         {% else %}
         <p>Can be driven to other town: No</p>
     {% endif %}
-    <p>Post from: {{ object.created_by }}</p>
-    <p>Date: {{ object.created_at}}</p>
+    <p><strong>Post from: </strong> {{ object.created_by }}</p>
+    <p><strong> Date: </strong> {{ object.created_at}}</p>
 
 {% if request.user == object.created_by %}
         <div class="details-buttons">
