--- a/templates/posts/add-post.html
+++ b/templates/posts/add-post.html
@@ -13,7 +13,7 @@
             {% endfor %}
         {% if form.errors %}
     <div class="error-message">
-        <strong>Oops! There are some errors:</strong>
+        <strong>There are some errors:</strong>
         <ul>
             {% for field in form %}
                 {% for error in field.errors %}
